@@ -32,7 +32,8 @@ reboot_msg         The system is rebooting...
 # for avoid pre-loading the username.
 #default_user        simone
 
-# current theme
+# current theme, use comma separated list to speficy a set to 
+# randomly choose from
 current_theme       default
 
 # Lock file
